# Arduino-PPM-Generator

./: .gitignore  Arduino-PPM-Generator.ino  README.md
.github/workflows/: cmake-multi-platform.yml
gui/: CMakeLists.txt  build.md  device.cpp  device.h  loader.cpp  loader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ppm-generator.pro  ppm.cpp  ppm.h  ppm_de.qm  ppm_de.ts  ppm_ru.qm  ppm_ru.ts  ppm_ua.ts  qdoubleslider.cpp  qdoubleslider.h  resources.qrc  resources.rc  translations.qrc
gui/data/: com.github.kolod.ppm-generator.desktop
gui/translations/: ppm_de.ts  ppm_ru.ts
installer/: build.bat
installer/MSVC2017_32bit/: build.bat
installer/MSVC2017_64bit/: build.bat
installer/MSVC2017_64bit/config/: config.xml  controller.qs
installer/MSVC2019_32bit/config/: config.xml
